@@ -39,9 +39,6 @@ jobs:
     container: ${{ matrix.target.container }}
     timeout-minutes: 20
 
-    env:
-      QT_BASE_DIR: ${{ github.workspace }}\deps\Qt
-
     strategy:
       matrix:
         target:
@@ -55,32 +52,24 @@ jobs:
           submodules: "recursive"
 
       - name: Cache Chocolatey packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ${{ runner.temp }}/choco
           key: choco-${{ hashFiles('Chocolatey.config') }}
 
-      - name: Install dependencies
-        run: python ./scripts/install_deps.py
-
-      - name: Set QT_VERSION env var
-        run: python ./scripts/github_env.py --set-qt-version
-
-      - name: Cache Qt
+      - name: Cache deps dir
         uses: actions/cache@v4
         with:
-          path: ${{ env.QT_BASE_DIR }}
-          key: ${{ runner.os }}-Qt_${{ env.QT_VERSION }}
+          path: ./deps
+          key: ${{ runner.os }}-deps-${{ hashFiles('config.yaml') }}
 
-      - name: Install Qt
-        run: python ./scripts/install_deps.py --only qt
+      - name: Install dependencies
+        run: python ./scripts/install_deps.py --ci-env
 
       - name: Setup VC++ environment
         uses: ilammy/msvc-dev-cmd@v1
 
       - name: Configure
-        env:
-          CMAKE_PREFIX_PATH: "${{ env.QT_BASE_DIR }}\\${{ env.QT_VERSION }}\\msvc2019_64\\"
         run: cmake -B build --preset=windows-release
 
       - name: Build
@@ -138,11 +127,17 @@ jobs:
         with:
           submodules: "recursive"
 
+      - name: Cache deps dir
+        uses: actions/cache@v4
+        with:
+          path: ./deps
+          key: ${{ runner.os }}-deps-${{ hashFiles('config.yaml') }}
+
       - name: Install dependencies
-        run: ./scripts/install_deps.py
+        run: ./scripts/install_deps.py --ci-env
 
       - name: Configure
-        run: cmake -B build --preset=macos-release -DCMAKE_PREFIX_PATH=$(brew --prefix qt@6)
+        run: cmake -B build --preset=macos-release
 
       - name: Build
         run: cmake --build build -j8
@@ -240,7 +235,7 @@ jobs:
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
       - name: Install dependencies
-        run: ./scripts/install_deps.py
+        run: ./scripts/install_deps.py --ci-env
 
       - name: Configure
         run: cmake -B build --preset=linux-release
