@@ -3,3 +3,4 @@ clang-format
 python-dotenv
 pyyaml
 dmgbuild; sys_platform == 'darwin'
+aqtinstall; sys_platform == 'win32' or sys_platform == 'darwin'
