@@ -51,6 +51,7 @@ Enhancements:
 - #7381 Set macOS min version to macOS 12.0
 - #7382 Re-run `macdeployqt6` to copy missing Qt 6 dependencies
 - #7384 Run `install_deps.py` script when building containers weekly
+- #7389 Correct Qt macOS target and drop `Core5Compat` lib
 
 # 1.14.6
 
